--- a/wallet/docs/openAPI/api.yaml
+++ b/wallet/docs/openAPI/api.yaml
@@ -16,12 +16,12 @@ paths:
         '200': 
           description: Transaction list successfully retrieved
           content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/Transaction'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Transaction'
     post:
       tags:
-          - Transaction
+        - Transaction
       summary: Create a new transaction
       requestBody:
         required: true
@@ -34,22 +34,22 @@ paths:
           description: Transaction successfully created
   /transactions/{id}:
     put:
-        tags:
-          - Transaction
-        summary: Update a transaction by ID
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Transaction' 
-        responses:
-          '200':
-            description: Transaction successfully updated
+      tags:
+        - Transaction
+      summary: Update a transaction by ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Transaction' 
+      responses:
+        '200':
+          description: Transaction successfully updated
     delete:
       tags:
-          - Transaction
-      summary:  Delete an transaction by its ID
+        - Transaction
+      summary:  Delete a transaction by its ID
       description: Allows you to delete a specific transaction using its id
       parameters:
         - name: id
@@ -59,13 +59,12 @@ paths:
             type: integer
       responses:
         '204':
-          description: Deleded transaction successfully
+          description: Deleted transaction successfully
         '404':
-          description: transaction not found
+          description: Transaction not found
         '500':
           description: Server error
   /account:
-# Retrieve the list of account available
     get:
       tags:
         - Account
@@ -73,15 +72,13 @@ paths:
       description: Retrieves a list of all available accounts
       responses:
         '200':
-          description: account list successfully retrieved
+          description: Account list successfully retrieved
           content:
             application/json:
               schema:
                 type: array
                 items:
                   $ref: '#/components/schemas/account'
-
-# create a new account associated with a specific currency
     post:
       tags:
         - Account
@@ -95,13 +92,12 @@ paths:
               $ref: '#/components/schemas/account'
       responses:
         '201':
-          description: account created successfully
+          description: Account created successfully
         '400':
           description: Bad request or invalid currency
         '500':
           description: Server error
   /account/{id}:
-# update entirely a account
     put:
       tags:
         - Account
@@ -123,7 +119,12 @@ paths:
       responses:
         '200':
           description: Account successfully updated
-# update of the specific attributes the account
+        '400':
+          description: Query error or invalid attributes
+        '404':
+          description: Account not found
+        '500':
+          description: Server error
     patch:
       tags:
         - Account
@@ -145,13 +146,13 @@ paths:
                 bank_name:
                   type: string
                   description: New name of the bank associated with the account
-                Account_number:
+                account_number:
                   type: string
                   description: New account number
                 username:
                   type: string
                   description: New account username
-                Account_type:
+                account_type:
                   type: string
                   description: New account type
                 balance:
@@ -162,14 +163,13 @@ paths:
                   description: New account currency
       responses:
         '200':
-          description: account attributes successfully updated
+          description: Account attributes successfully updated
         '400':
-          description:  Query error or invalid attributes
+          description: Query error or invalid attributes
         '404':
-          description: account not found
+          description: Account not found
         '500':
           description: Server error
-# Delete account by id
     delete:
       tags:
         - Account
@@ -183,9 +183,9 @@ paths:
             type: integer
       responses:
         '204':
-          description: Deleded account successfully
+          description: Deleted account successfully
         '404':
-          description: account not found
+          description: Account not found
         '500':
           description: Server error
 
@@ -209,7 +209,7 @@ components:
         - type_transaction
         - date_transaction
         - amount
-        - account
+        - account_id
     account:
       type: object
       properties:
@@ -221,7 +221,7 @@ components:
           description: Username associated with the account
         account_number:
           type: string
-          description: account number
+          description: Account number
         account_type:
           type: string
           description: Type of account
@@ -233,7 +233,7 @@ components:
           description: Name of the bank
         balance:
           type: number
-          description: account balance
+          description: Account balance
         currency:
           type: string
           description: Code of the currency associated with the account
@@ -244,3 +244,14 @@ components:
         - bank_name
         - balance
         - currency
+    currency:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Unique identifier for the currency
+        currencyName:
+          type: string
+          description: Name of the currency
+      required:
+        - currencyName
