feat: small change

--- a/wallet/docs/openAPI/api.yaml
+++ b/wallet/docs/openAPI/api.yaml
@@ -18,7 +18,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Transaction'
+                type: array
+                items: 
+                  $ref: '#/components/schemas/Transaction'
     post:
       tags:
         - Transaction
